修改线下课--已报名，底部显示状态

--- a/wechat/src/main/webapp/xcview/html/school_class.html
+++ b/wechat/src/main/webapp/xcview/html/school_class.html
@@ -302,12 +302,12 @@
 							</a>
 							{{else}}
 							<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="2">
-								立即学习
+								已报名,立即查看
 							</a>
 						{{/if}}
 					{{else if watchState==2 || watchState==3}}
 					<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="2">
-						已报名
+						已报名,立即查看
 					</a>	
 					{{/if}}
 				{{else}}
