动态--其他选项

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -151,12 +151,52 @@
 			</div>
 		</div>
 		<!-- 点击全部动态=显示筛看结束 -->
-
-
-
 	</div>
 	<!-- 中间内容开始 -->
-	
+	<div class="the_dynamic">
+		<!-- 其他 -->
+		<div class="rests_nav">
+			<div class="rests_nav_span">
+				<span class="title">余老师讲课风采</span>
+				<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
+			</div>
+			<div id="ccvideo">
+				<video>
+					
+				</video>
+			</div>
+			<div class="rests_nav_bottom">
+				<span class="time">6小时前</span>
+				<span class="img"><img src="/xcview/images/zan01.png" alt="" class="zan_img" /><img src="/xcview/images/returned.png" alt="" class="evaluate_img" /></span>
+				<div class="both"></div>
+			</div>
+			<div class="number_people">
+				<div class="number_people_bg">
+					<div class="number_people_fize"><img src="/xcview/images/zan01.png" alt="" class="number_people_zan" /><span>你傻啊，我不傻，你傻</span></div>
+					<!-- 评价内容 -->
+					<div class="evaluate_main"><span class="name">辣椒小姐：</span><span class="evaluate_cen">我是内容</span></div>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- 直播 -->
+		<div class="sinatv_nav">
+			
+		</div>
+
+		<!-- 课程 -->
+		<div class="course_nav"></div>
+
+		<!-- 医案 -->
+		<div class="consilia_nav"></div>
+
+		<!-- 文章 -->
+		<div class="article_nav"></div>
+
+		
+
+	</div>
 	<!-- 中间内容结束 -->
 	<br>
 	<br>
