专辑增加更新时间字段。筛选修改微信pcbug。

--- a/wechat/src/main/webapp/xcview/html/curriculum_table.html
+++ b/wechat/src/main/webapp/xcview/html/curriculum_table.html
@@ -82,6 +82,23 @@
     white-space: nowrap;
     display: block;
 }
+.li_list_one_right .div .zhibo_play{
+	z-index: 9;
+}
+.no_class{
+	/*margin-top: -6.5rem;*/
+
+	        position: fixed;
+	        top: 50%;
+	        left: 50%;
+	        margin-top: -8rem;
+	        z-index: -1;
+	        width: 3rem;
+	        height: 3.5rem;
+	        /*background: red;*/
+	        margin-top: -0.5rem;
+	        margin-left: -1.75rem; 
+}
 </style>
 </head>
 <body style="background: #F8F8F8;background1: red;">
@@ -247,7 +264,7 @@
 					<div class="both"></div>
 				</div>
 			</div>
-			<div class="all_mold all_mold3" style="display: none;margin-bottom: 1rem;">
+			<div class="all_mold all_mold3" style="display: none;margin-bottom: 0.1rem;">
 				<div class="all_classify_right_type">城市</div>
 				<div class="all_right_type all_right_type_twos" id="draw_city_list">
 				<!-- 	<div class="all_right_type_one">上海</div>
@@ -264,7 +281,7 @@
 				</div>
 				<div class="both"></div>
 			</div>
-			<div class="all_mold all_mold4" style="display: none;margin-bottom: 1rem;">
+			<div class="all_mold all_mold4" style="display: none;margin-bottom: 0.1rem;">
 				<div class="all_classify_right_type">直播状态</div>
 				<div class="all_right_type" id="draw_live_status_list">
 			<!-- 		<div class="all_right_type_one">直播中</div>
@@ -278,7 +295,7 @@
 					<div class="both"></div>
 				</div>
 			</div>
-			<div class="" style="width: 100%;height: 0.89rem;display: none;"></div>
+			<div class="" style="width: 100%;height: 0.89rem;display1: none;"></div>
 			<div class="all_bottom">
 				<div class="all_bottom_btn0">重置</div>
 				<div class="all_bottom_btn1">确认</div>
