--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -197,7 +197,7 @@
 				{{each items as item i}}
 				
 			        <li data-myvideo="{{item.directId}}" data-courseId="{{item.id}}" data-courseName="{{item.gradeName}}">
-						<p class='all_list_ul_li_p'>{{item.no}}&nbsp;{{item.gradeName}}</p>
+						<p class='all_list_ul_li_p'>{{item.gradeName}}</p>
 					</li>
 				
 				{{/each}}
