增加页面跳转

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -76,7 +76,7 @@
 		<div class="wrap-header" id="header">
 			<div class="header">		
 				<p>我是医师名字</p>
-				<div class="arror_return">
+				<div class="arror_return" onclick="javascript:history.back(-1);" >
 					<img src="/xcview/images/anchorj.png"/>
 				</div>
 				<div class="header_news">
