--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -75,7 +75,7 @@
 				<div class="physicians">
 					<div class="physician_title" code="{{item.code}}">{{item.text}}<img src="/xcview/images/video_review.png" alt=""></div>
 					{{each item.doctors as item i}}   
-					<div class="physician_cen">
+					<div class="physician_cen" data-id="{{item.id}}">
 						<div class="head_portrait">
 							<img src="{{item.headPortrait}}" alt="" />
 						</div>
