--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -244,6 +244,7 @@
 				<div class="select_box" style="background: #f8f8f8;display: block;">
 					<div class="activity-wrap">
 						<textarea class="publish-activity" name="" rows="" cols="" placeholder="发布动态"></textarea>
+						<span class="comment-wrong activity-error hide">！动态内容不能为空</span>
 						<button type="button" class="btn-deliver">发布动态</button>
 						<ul class="activity-nav">
 							<li>
@@ -289,6 +290,7 @@
 									<div class="video-title">
 										<span style="color: #666666;margin-right: 10px;">标题</span>
 										<input type="" name="" id="" value="" placeholder="好的标题可以让大家更感兴趣" />
+										<span class="comment-wrong video-error hide">！标题不能为空</span>
 									</div>
 								</div>
 								<div class="video-cover-wrap">
