中医师首页去掉热门搜索。筛选页修改bug

--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -52,7 +52,7 @@
 
 	<!-- 中间内容开始 -->
 	<!-- hotSearch -->
-	<div class="hot_search">
+	<!-- <div class="hot_search">
 		<p class="hot_search_title">热门搜索</p>
 		<div class="" id="hotSearch">
 			<script type="text/html" id="hotSearchs">
@@ -61,11 +61,8 @@
 				{{/each}}
 			</script>
 		</div>
-		<!-- <span>儿科</span>
-		<span>儿科</span>
-		<span>儿科</span> -->
 		<div class="both"></div>
-	</div>
+	</div> -->
 	
 
 	<div class="main" id="hot_title">
