--- a/wechat/src/main/webapp/xcview/html/physician/physician_list.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physician_list.html
@@ -208,7 +208,7 @@
 				</div>
 			</div>
 			
-			<div class="" style="width: 100%;height: 0.89rem;display: none;"></div>
+			<div class="" style="width: 100%;height: 0.89rem;display1: none;"></div>
 			<div class="all_bottom">
 				<div class="all_bottom_btn0">重置</div>
 				<div class="all_bottom_btn1">确认</div>
