--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -52,7 +52,7 @@
 
 	<!-- 中间内容开始 -->
 	<!-- hotSearch -->
-	<!-- <div class="hot_search">
+	 <div class="hot_search">
 		<p class="hot_search_title">热门搜索</p>
 		<div class="" id="hotSearch">
 			<script type="text/html" id="hotSearchs">
@@ -62,7 +62,7 @@
 			</script>
 		</div>
 		<div class="both"></div>
-	</div> -->
+	</div>
 	
 
 	<div class="main" id="hot_title">
