邀请函分享错误

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -260,7 +260,7 @@ window.onload = function(){
               }  
           }  
       });  
-      window.history.pushState('forward', null, './inherited_introduction.html');  
+      window.history.pushState('forward', null, './inherited_introduction.html?merId='+merId);  
   }
 };
 </script> 
