--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -112,7 +112,7 @@
 		<div class="data_name">
 			<script type="text/html" id="data_name">
 				<ul class="playTime playTime_z z">
-					<li style="padding: 0 0 0 0.26rem;"><span style="margin-left: 0;"><img src="../images/outline_bg.png"/ style="margin-top: 0.03rem;margin-right: 0.1rem;" />共{{courseNumber}}集，已更新{{dirtyNumber}}集 每{{dirtyDate}}更新</span></li>
+					<li style="padding: 0 0 0 0.26rem;"><span style="margin-left: 0;"><img src="../images/outline_bg.png"/ style="margin-top: 0.03rem;margin-right: 0.1rem;" />共{{courseNumber}}集，已更新{{dirtyNumber}}集 (每{{dirtyDate}}更新)</span></li>
 				</ul>
 				<div class="both"></div>	
 			</script>	
