--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -162,9 +162,9 @@
 		<td>
 			{{if course.applyStatus==1}}
 			{{if course.status==1}}
-			<a href="javascript:;" onclick="confirmCourseSale(0,{{course.id}})">下架</a>
+			<a href="javascript:;" onclick="confirmCourseSale(0,{{course.id}},{{course.courseId}})">下架</a>
 			{{else}}
-			<a href="javascript:;" onclick="confirmCourseSale(1,{{course.id}})">上架</a>
+			<a href="javascript:;" onclick="confirmCourseSale(1,{{course.id}},{{course.courseId}})">上架</a>
 			<a href="javascript:;" onclick="editCourse({{course.id}},true)">编辑</a>
 			{{/if}}
 			{{else if course.applyStatus==2}}
